--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
+    "miragejs": "^0.1.48",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^6.29.0",
