--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^6.29.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
