--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "miragejs": "^0.1.48",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^6.29.0",
     "react-router-dom": "^6.4.4",
     "react-spinners": "^0.15.0",
